--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.43.2",
+    "sass-loader": "^12.3.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.1"
   },
